--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-spinners": "^0.15.0",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
