--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-input-emoji": "^5.9.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-spinners": "^0.15.0",
